# lvgl_simulator_qt6

./: CMakeLists.txt  main.qml
freetype/: CMakeLists.txt
lvgl/: CMakeLists.txt  lv_conf.h
lvgl-8.3.6/: lv_conf.h
lvgl-8.3.6/lvgl/env_support/cmake/: custom.cmake
lvgl/env_support/cmake/: custom.cmake
lvgl/src/hal/: lv_hal_disp.h
src/: get_tick.cpp  lcd.cpp  lcd.hpp  lv_port_disp.cpp  lv_port_disp.h  lv_port_indev.cpp  lvgl_thread.cpp  lvgl_thread.hpp  main.cpp  screen_console.cpp  screen_console.hpp
